payment keys optimisation
