# src/user/user.controller.ts
@@ -1,7 +1,8 @@
 
-import { Controller, Patch, Body, Param, Delete } from '@nestjs/common';
+import { Controller, Patch, Body, Param, Delete, UseGuards, Req } from '@nestjs/common';
 import { UserService } from './user.service';
 import { UpdateUserDto } from './dto/user.dto';
+import { AuthGuard } from '@nestjs/passport';
 
 
 @Controller('users')
@@ -9,14 +10,32 @@ export class UserController {
   constructor(private readonly usersService: UserService) {}
 
   // Update profile
-  @Patch(':id')
-  async updateProfile(@Param('id') id: string, @Body() dto: UpdateUserDto) {
-    return this.usersService.updateProfile(+id, dto);
+
+
+
+
+
+  @UseGuards(AuthGuard('jwt'))
+  @Patch()
+  updateProfile(
+    @Req() req,
+    @Body() dto: UpdateUserDto,
+  ) {
+    return this.usersService.updateProfile(req.user.id, dto);
+
   }
 
-  // Delete user
-  @Delete(':id')
-  async deleteUser(@Param('id') id: string) {
-    return this.usersService.deleteUser(+id);
+  
+
+  // Delete user   
+
+  @UseGuards(AuthGuard('jwt'))
+  @Delete()
+  deleteUser(
+    @Req() req,
+  ) {
+    return this.usersService.deleteUser(req.user.id);
+
   }
+
 }
